--- a/index1.html
+++ b/index1.html
@@ -2,39 +2,19 @@
 <html lang="en-ca">
   <head>
     <meta charset="utf-8" />
-    <meta name="description" content="ICS2O-Unit-0-00-AAA" />
-    <meta name="keywords" content="ICS2O Unit0 00 AAA" />
+    <meta name="description" content="ICS2O-Unit1-04-HTML" />
+    <meta name="keywords" content="ICS2O Unit1 04 HTML" />
     <meta name="author" content="Youngwook" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style1.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
-    <link
-      rel="stylesheet"
-      href="https://code.getmdl.io/1.3.0/material.blue-red.min.css"
-    />
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
-    <link rel="manifest" href="site.webmanifest" />
-    <title>Template</title>
+    <title>My first webpage, with CSS</title>
   </head>
   <body>
-    <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-      <header class="mdl-layout__header">
-        <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title">Template</span>
-        </div>
-      </header>
-      <main class="mdl-layout__content">
-        <div class="page-content" style="padding-left: 100px">Template</div>
-        <p>
-          <a href="./index2.html">Index2.html</a>
-        </p>
-      </main>
-    </div>
+    <h1>Style is important</h1>
+    <p>Proper HTML style is important</p>
+    <img src="./images/HTML-style-guide.jpeg" alt="style" height="300px"/>
+    <p>
+      <a href="./index2.html">My index2.html page</a>
+    </p>
   </body>
 </html>
