--- a/index2.html
+++ b/index2.html
@@ -30,20 +30,24 @@
     <h3>Capital city of countries</h3>
     <table>
       <tr>
-        <th>Country</th>
-        <th>Capital city</th>
+        <th>Countries list</th>
+        <th>Capital city of countries list</th>
       </tr>
       <tr>
-        <td>America/td></td>
+        <td>America</td>
         <td>Washington D.C</td>
       </tr>
       <tr>
-        <td>Centro comercial Moctezuma</td>
-        <td>Francisco Chang</td>
+        <td>China</td>
+        <td>Beijing</td>
       </tr>
       <tr>
-        <td>Ernst Handel</td>
-        <td>Roland Mendel</td>
+        <td>Japan</td>
+        <td>Tokyo</td>
+      </tr>
+      <tr>
+        <td>Germany</td>
+        <td>Berlin</td>
       </tr>
     </table>
   </body>
